--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scalable-email-backend-system",
-  "version":"1.0.0",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "author": "",
   "licence": "MIT",
   "dependencies": {
+    "bullmq": "^5.1.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
